added .env to .gitignore

--- a/Projects/Project1/Discord-Bot/.env
+++ b/Projects/Project1/Discord-Bot/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN = MTAxODg3ODIwOTk1MTAwNjc3MA.GRRY_m.W_PHqLYyzeP3MMqvrivS69-yKciDNooEULBTVc
+DISCORD_TOKEN = MTAxODg3ODIwOTk1MTAwNjc3MA.GOfchm.yyJ4SOBi2RxkfGljQrfS2ujbmHeQeY_T8A9WMU
