--- a/Projects/Project3/oneal-cf.yml
+++ b/Projects/Project3/oneal-cf.yml
@@ -41,7 +41,7 @@ Resources:
       Tags:
         - Key: Application
           Value: !Ref 'AWS::StackId'
-          Key: Name
+        - Key: Name
           Name: ONeal-CF-Subnet
   InternetGateway:
     Type: 'AWS::EC2::InternetGateway'
@@ -49,7 +49,7 @@ Resources:
       Tags:
         - Key: Application
           Value: !Ref 'AWS::StackId'
-          Key: Name
+        - Key: Name
           Name: ONeal-CF-Gateway
   AttachGateway:
     Type: 'AWS::EC2::VPCGatewayAttachment'
@@ -63,7 +63,7 @@ Resources:
       Tags:
         - Key: Application
           Value: !Ref 'AWS::StackId'
-          Key: Name
+        - Key: Name
           Value: ONeal-CF-RouteTable
   Route:
     Type: 'AWS::EC2::Route'
@@ -88,7 +88,7 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       GroupDescription: Enable SSH access via port 22 and open all insternal ports.
-      Key: Name
+    - Key: Name
       Value: ONeal-CF-SecurityGroups
       SecurityGroupIngress:
         - IpProtocol: tcp
